--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "update": "npx renovate --token \"$GITHUB_ACCESS_TOKEN_RENOVATE\" kogai/sandbox-renovate"
   },
   "keywords": [],
   "author": "",
