use exists config

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.11.3"
+  },
+  "private": true,
   "scripts": {
     "update": "npx renovate --token \"$GITHUB_ACCESS_TOKEN_RENOVATE\" kogai/sandbox-renovate"
   },
