--- a/package.json
+++ b/package.json
@@ -1,19 +1,145 @@
 {
   "name": "sandbox-renovate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.1",
+  "private": true,
   "engines": {
     "node": "8.11.3"
   },
-  "private": true,
   "scripts": {
-    "update": "npx renovate --token \"$GITHUB_ACCESS_TOKEN_RENOVATE\" kogai/sandbox-renovate"
+    "update": "npx renovate --token \"$GITHUB_ACCESS_TOKEN_RENOVATE\" feedforce/ecbooster"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "@kogai/typed_i18n": "^0.5.9",
+    "@playlyfe/gql": "^2.3.2",
+    "@storybook/addon-actions": "^4.0.0-alpha.10",
+    "@storybook/addon-knobs": "^4.0.0-alpha.10",
+    "@storybook/cli": "^4.0.0-alpha.10",
+    "@storybook/react": "^4.0.0-alpha.10",
+    "apollo-codegen": "^0.20.0",
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^8.0.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.1.2",
+    "babel-jest": "^23.0.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^2.0.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "create-file": "^1.0.1",
+    "css-loader": "^0.28.5",
+    "css-modules-flow-types-loader": "^1.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-import-resolver-webpack": "^0.10.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-immutable": "^1.0.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.0.0",
+    "flow-bin": "^0.75.0",
+    "flow-typed": "^2.1.5",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.0.0",
+    "jest": "^23.0.0",
+    "jest-cli": "^23.0.0",
+    "jest-localstorage-mock": "^2.2.0",
+    "jest-mock-now": "^1.2.0",
+    "jest-transform-graphql": "^2.1.0",
+    "moment-timezone": "^0.5.17",
+    "nock": "^9.3.2",
+    "node-dir": "^0.1.17",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "prettier": "^1.9.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.3.0",
+    "reg-notify-github-plugin": "^0.7.0",
+    "reg-notify-slack-plugin": "^0.7.0",
+    "reg-publish-s3-plugin": "^0.7.0",
+    "reg-simple-keygen-plugin": "^0.7.0",
+    "reg-suit": "^0.7.0",
+    "sass-loader": "^7.0.0",
+    "seed-random": "^2.2.0",
+    "storybook-chrome-screenshot": "^1.0.0",
+    "style-loader": "^0.21.0",
+    "stylefmt": "^6.0.0",
+    "stylelint": "^9.0.0",
+    "stylelint-config-sass-guidelines": "^5.0.0",
+    "stylelint-config-standard": "^18.0.0",
+    "stylelint-order": "^0.8.0",
+    "stylelint-scss": "^3.0.0",
+    "url-loader": "^1.0.0",
+    "watch": "^1.0.2",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.0.8",
+    "yaml-js": "^0.2.0"
+  },
   "dependencies": {
-    "@kogai/typed_i18n": "^0.4.8"
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-link": "^1.2.1",
+    "apollo-link-context": "^1.0.7",
+    "apollo-link-error": "^1.0.7",
+    "apollo-link-http": "^1.5.3",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "bugsnag-js": "^4.0.0",
+    "chart.js": "^2.7.2",
+    "classnames": "^2.2.5",
+    "detect-browser": "^2.4.0",
+    "fast-xml-parser": "^3.11.1",
+    "formik": "^0.11.11",
+    "graphql": "^0.13.0",
+    "graphql-tag": "^2.8.0",
+    "graphql-tools": "^3.0.2",
+    "hex-rgba": "^1.0.2",
+    "history": "^4.7.2",
+    "http-status-codes": "^1.3.0",
+    "i18next": "^11.0.0",
+    "logrocket": "^0.6.11",
+    "moment": "^2.19.1",
+    "numeral": "^2.0.6",
+    "ramda": "^0.25.0",
+    "rc-calendar": "^9.6.0",
+    "react": "^16.2.0",
+    "react-apollo": "^2.1.2",
+    "react-chartjs-2": "^2.6.1",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-dom": "^16.2.0",
+    "react-gtm-module": "^2.0.0",
+    "react-highlight": "^0.12.0",
+    "react-i18next": "^7.0.0",
+    "react-load-image": "^0.1.6",
+    "react-portal-tooltip": "^2.3.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
+    "react-router-ga": "^1.0.0",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-select-plus": "^1.1.0",
+    "react-transition-group": "^2.2.1",
+    "recompose": "^0.27.0",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.9.1",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.79.0",
+    "string-hash": "^1.1.3",
+    "unfetch": "^3.0.0",
+    "validator": "^10.0.0"
   }
 }
