--- a/package.json
+++ b/package.json
@@ -126,11 +126,11 @@
     "react-load-image": "^0.1.6",
     "react-portal-tooltip": "^2.3.0",
     "react-redux": "^5.0.5",
-    "react-router": "^4.2.0",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2",
+    "react-router": "4.2.0",
+    "react-router-config": "1.0.0-beta.4",
+    "react-router-dom": "4.2.2",
     "react-router-ga": "^1.0.0",
-    "react-router-redux": "^5.0.0-alpha.8",
+    "react-router-redux": "5.0.0-alpha.9",
     "react-select-plus": "^1.1.0",
     "react-transition-group": "^2.2.1",
     "recompose": "^0.27.0",
