--- a/package.json
+++ b/package.json
@@ -91,10 +91,10 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
-    "apollo-link": "^1.2.1",
-    "apollo-link-context": "^1.0.7",
-    "apollo-link-error": "^1.0.7",
-    "apollo-link-http": "^1.5.3",
+    "apollo-link": "1.2.2",
+    "apollo-link-context": "1.0.8",
+    "apollo-link-error": "1.0.9",
+    "apollo-link-http": "1.5.4",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bugsnag-js": "^4.0.0",
